全面改版完毕
v1

--- a/polls/templates/blog.html
+++ b/polls/templates/blog.html
@@ -405,12 +405,12 @@ var next_pg
 								<!-- <h5 class="font-weight-bold" ><a href="#" >精华知识</a></h5> -->
 								<button href="#" class='btn_mine btn-info btn-sm_mine' >热点文章</button>
 								<button href="#" class='btn_mine btn-info btn-sm_mine' >最新发布</button>
-								<button href="#" class='btn_mine btn-info btn-sm_mine' >我的文章</button>
-								<button href="#" class='btn_mine btn-info btn-sm_mine' >精华知识</button>
-								<button href="#" class='btn_mine btn-info btn-sm_mine' >热点文章</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >我的文章热点文章</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >精华</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >热文章</button>
 								<button href="#" class='btn_mine btn-info btn-sm_mine' >最新发布</button>
 								<button href="#" class='btn_mine btn-info btn-sm_mine' >我的文章</button>
-								<button href="#" class='btn_mine btn-info btn-sm_mine' >精华知识</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >精华知识的</button>
 							</p>
 						</div>
 					</div>
