--- a/polls/templates/showblog.html
+++ b/polls/templates/showblog.html
@@ -1,248 +1,322 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-<meta charset="utf-8"> 
-<script src="/static/js/jquery-3.3.1.js"></script>
-<script src="/static/js/jquerysession.js"></script>
-<link href="/static/bootstrap-4.0.0-dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="/static/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
-<script src="/static/thirdparty/popper.min.js"></script>
-<link rel="stylesheet" href="/static/thirdparty/monokai_sublime.min.css">
-<link href="/static/thirdparty/magnific-popup.min.css" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script>
+<!DOCTYPE HTML>
+<html>
+	<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- <title>Church &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	
 
-{% if request.session.username %}  
-	//alert("{{ request.session.username }} ")
-{% else %}  
-	alert("请登陆")
-	$(location).attr('href', '/login')
-{% endif %}  
+	
 
-$(document).ready(function() {
+  	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content=""/>
+	<meta property="og:image" content=""/>
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
 
-	{% if request.session.searchcondition %}  
-		$('#searchblogcondition').val("{{ request.session.searchcondition }}")
-		//alert("{{ request.session.searchcondition }}")
-	{% else %}  
-		//alert("没有request.session.searchcondition")
-	{% endif %}  
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
+	
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/icomoon.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/bootstrap.css">
+
+	<!-- Magnific Popup -->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/magnific-popup.css">
+
+	<!-- Flexslider  -->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/flexslider.css">
+
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/owl.theme.default.min.css">
+
+	<!-- Theme style  -->
+	<link rel="stylesheet" href="/static/thirdparty/ft5_79_church/css/style.css">
+
+	<!-- Modernizr JS -->
+	<script src="/static/thirdparty/ft5_79_church/js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
+	
+	<script src="/static/js/jquery-3.3.1.js"></script>
+	<script src="/static/js/jquerysession.js"></script>
+	<link href="/static/thirdparty/fontawesome-free-5.0.10/web-fonts-with-css/css/fontawesome-all.css" rel="stylesheet">
 	
 	
+	<style>
+		.my-new-border{
+						border-top-color: rgba(0, 0, 0, 0.1);
+						border-top-style: solid;
+						border-top-width: 2px;
+						border-right-color: rgba(0, 0, 0, 0.1);
+						border-right-style: solid;
+						border-right-width: 2px;
+						border-bottom-color: rgba(0, 0, 0, 0.1);
+						border-bottom-style: solid;
+						border-bottom-width: 2px;
+						border-left-color: rgba(0, 0, 0, 0.1);
+						border-left-style: solid;
+						border-left-width: 2px;
+						border-image-source: initial;
+						border-image-slice: initial;
+						border-image-width: initial;
+						border-image-outset: initial;
+						border-image-repeat: initial;
+						
+						padding-top: 8px;
+						padding-right: 20px;
+						padding-bottom: 8px;
+						padding-left: 20px;
+					}
+					
+		.btn_mine {
+			  display: inline-block;
+			  font-weight: 400;
+			  text-align: center;
+			  white-space: nowrap;
+			  vertical-align: middle;
+			  -webkit-user-select: none;
+			  -moz-user-select: none;
+			  -ms-user-select: none;
+			  user-select: none;
+			  border: 1px solid transparent;
+			  padding: 0.375rem 0.75rem;
+			  font-size: 1rem;
+			  line-height: 1.5;
+			  border-radius: 0.25rem;
+			  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+			  margin-bottom:10px;
+			  margin-right:10px;
+			}
+			
+		.btn-sm_mine {
+			  padding: 0.25rem 0.5rem;
+			  font-size: 0.875rem;
+			  line-height: 1.5;
+			  border-radius: 0.2rem;
+			}
+
+	</style>
 	
-	function getCookie(name) {  
-			var cookieValue = null;  
-			if (document.cookie && document.cookie != '') {  
-				var cookies = document.cookie.split(';');  
-				for (var i = 0; i < cookies.length; i++) {  
-					var cookie = jQuery.trim(cookies[i]);  
-					// Does this cookie string begin with the name we want?  
-					if (cookie.substring(0, name.length + 1) == (name + '=')) {  
-						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));  
-						break;  
+	<script>
+		$(document).ready(function() {
+			{% if request.session.username %}  
+				//alert("{{username}}")
+				//alert("{{ request.session.username }} ")
+				
+				//$('#fh5co-hero').hide()
+				
+			{% else %}  
+				//alert("还未登录")
+				<!-- $('#fh5co-hero').show() -->
+				$(location).attr('href', '/loginpop')
+			{% endif %}  
+			function getCookie(name) {  
+					var cookieValue = null;  
+					if (document.cookie && document.cookie != '') {  
+						var cookies = document.cookie.split(';');  
+						for (var i = 0; i < cookies.length; i++) {  
+							var cookie = jQuery.trim(cookies[i]);  
+							// Does this cookie string begin with the name we want?  
+							if (cookie.substring(0, name.length + 1) == (name + '=')) {  
+								cookieValue = decodeURIComponent(cookie.substring(name.length + 1));  
+								break;  
+							}  
+						}  
 					}  
+					return cookieValue;  
 				}  
-			}  
-			return cookieValue;  
-		}  
-		function csrfSafeMethod(method) {  
-			// these HTTP methods do not require CSRF protection  
-			return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));  
-		}  
-		$.ajaxSetup({  
-			beforeSend: function(xhr, settings) {  
-			var csrftoken = getCookie('csrftoken');       
-			if (!csrfSafeMethod(settings.type) && !this.crossDomain) {  
-					xhr.setRequestHeader("X-CSRFToken", csrftoken);  
+				function csrfSafeMethod(method) {  
+					// these HTTP methods do not require CSRF protection  
+					return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));  
 				}  
-			}  
-		}); 
+				$.ajaxSetup({  
+					beforeSend: function(xhr, settings) {  
+					var csrftoken = getCookie('csrftoken');       
+					if (!csrfSafeMethod(settings.type) && !this.crossDomain) {  
+							xhr.setRequestHeader("X-CSRFToken", csrftoken);  
+						}  
+					}  
+				}); 
+				
+				 $('#searchblog').click(function(){
+					//alert($('#searchblogcondition').val())
+					//alert('/blog/?pg=1&searchval='+$('#searchblogcondition').val())
+					window.location.href='/blog/?pg=1&searchval='+$('#searchblogcondition').val(); 
+				  })
+				  
+				  $('#publishblog').click(function(){
+					window.location.href='/publish'; 
+				  })
+		})
 
-  
-  $('#searchblog').click(function(){
-	//alert('search click')
-	window.location.href='/blog/?pg=1&searchval='+$('#searchblogcondition').val(); 
-  })
-});
-
-
-function HTMLEncode(html) {
-    var temp = document.createElement("div");
-    (temp.textContent != null) ? (temp.textContent = html) : (temp.innerText = html);
-    var output = temp.innerHTML;
-    temp = null;
-    return output;
-}
-
-function HTMLDecode(text) { 
-    var temp = document.createElement("div"); 
-    temp.innerHTML = text; 
-    var output = temp.innerText || temp.textContent; 
-    temp = null; 
-    return output; 
-} 
-
-  
-</script>
-
-</head>
-
-<body>
-
-<div class="container">
-<div class="row">
-<div class="col-sm-12" >
-<div id="demo" class="carousel slide">
- 
-  <!-- 指示符 -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
- 
-  <!-- 轮播图片 -->
-  <div class="carousel-inner">
-    <div class="carousel-item active" style="background-size:cover">
-      <img src="/media/photos/7.bmp" >
-	  <div class="carousel-caption">
-        <h3>不忘初心</h3>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/media/photos/8.jpg" >
-	  <div class="carousel-caption">
-        <h3>牢记使命</h3>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/media/photos/9.jpg" >
-	  <div class="carousel-caption">
-        <h3>永远奋斗</h3>
-      </div>
-    </div>
-  </div>
- 
-  <!-- 左右切换按钮 -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
- 
-</div>
-</div>
-</div>
-</div>
-
-<div class="container" >
-	<p></p>
 	
-	<ul class="nav  nav-tabs justify-content-left">
-		<li class="nav-item">
-			<a class="nav-link active" href="/blog/?pg=1&searchval=">首页</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/didi">论坛</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="/publish">发布</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">下载</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">关于</a>
-		</li>
 
-		<div class="form-inline " style="float:right;">
-			{% csrf_token %}
-			<input class="form-control" type="text" placeholder="Search" id="searchblogcondition" name="searchblogcondition">
-			<button class="btn btn-default" type="submit" id="searchblog">Search</button>
-		</div>
-	</ul>
+		function HTMLEncode(html) {
+			var temp = document.createElement("div");
+			(temp.textContent != null) ? (temp.textContent = html) : (temp.innerText = html);
+			var output = temp.innerHTML;
+			temp = null;
+			return output;
+		}
 
-</div>
+		function HTMLDecode(text) { 
+			var temp = document.createElement("div"); 
+			temp.innerHTML = text; 
+			var output = temp.innerText || temp.textContent; 
+			temp = null; 
+			return output; 
+		} 
 
-<div class="container" id="content">
-	<div class="row">
-		<div class="col-md-9">
-			<div class="alert alert-light">
-			
-			</div>
-			
-			
-			<div class="alert alert-secondary">
-				<h3 class="text-center">{{blog.blogtitle}}</h3>
-				<h6 class="text-center"><small>作者：<span class="text-info">大智若愚</span> • {{blog.blogdate|date:"Y-m-d H:i:s"}}</small></h6>
-				<div  class="alert alert-secondary" style="border:0px;" id="testblog111" >
-						<p class="{{blog.id}}" ></p>
-						<script>
-							$(function(){
-								var blgcontend = HTMLDecode("{{blog.blogcontent}}")
-								blgcontend = blgcontend.substring(0,100)
-								$(".{{blog.id}}").html(HTMLDecode("{{blog.blogcontent}}"));
-							});
-							//alert('{{blog.blogdate|date:"Y-m-d H:i:s"}}')
-						</script>
-				</div>
-				<!-- <button type="button" class="btn btn-info btn-sm" id="btnshowall" onclick="showablog('{{blog.id}}','{{blog.blogtitle}}')">阅读全文</button> -->
-			</div>
-			
-			
-			
-		</div>
-		<div class="col-md-3">
-			<div class="alert alert-light">
-			
-			</div>
-			<div class="alert alert-secondary">
-			    <h4 class="title">导航</h4>
-				<nav class="navbar">
-				  <!-- Links -->
-				  <ul class="navbar-nav">
-					<li class="nav-item">
-					  <a class="nav-link" href="#">热点文章</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">最新发布</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">我的标签</a>
-					</li>
-				  </ul> 
-				</nav>
-			
-			</div>
-			
-			<div class="alert alert-secondary">
-				<!-- start tag cloud widget -->
+		
+	</script>
+	
+	</head>
+	<body>
+		
+	<div class="fh5co-loader"></div>
+	
+	<div id="page">
+	<nav class="fh5co-nav" role="navigation">
+		<div class="container-wrap">
+			<div class="top-menu">
 				<div class="row">
-					<h4 class="title">标签云</h4>
-					<div class=" row-fluid">						
-						<a href="/tag/ke-hu-duan/" class='btn btn-info btn-sm' style="float:left;margin-left:5px;margin-bottom:4px;">客户端</a>
-						<a href="/tag/android/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">Android</a>
-						<a href="/tag/jquery/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">jQuery</a>
-						<a href="/tag/ghost-0-7-ban-ben/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">Ghost 0.7 版本</a>
-						<a href="/tag/opensource/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">开源</a>
-						<a href="/tag/zhu-shou-han-shu/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">助手函数</a>
-						<a href="/tag/tag-cloud/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">标签云</a>
-						<a href="/tag/navigation/" class='btn btn-info btn-sm ' style="float:left;margin-left:5px;margin-bottom:4px;">导航</a>	
+					
+					<div class="col-md-12 col-md-offset-0 text-center menu-1">
+						<ul>
+							<li class="active"><a href="/loginsucc">首页</a></li>
+							<li><a href="/blog/?pg=1&searchval=">论坛</a></li>
+							<li class="has-dropdown">
+								<a href="/report">报告</a>
+								<ul class="dropdown">
+									<li><a href="#">电力</a></li>
+									<li><a href="#">暖通</a></li>
+									<li><a href="#">消防</a></li>
+									<li><a href="#">设施</a></li>
+								</ul>
+							</li>
+							<li><a href="#">人事</a></li>
+							<li><a href="#">其它</a></li>
+							<li><a href="#">联系我们</a></li>
+							
+						</ul>
 					</div>
 				</div>
-				<!-- end tag cloud widget -->	
+				
 			</div>
-			
-			
-			
 		</div>
+	</nav>
+	<div class="container-wrap">
+		
+		<div id="fh5co-services" class="fh5co-light-grey" style="padding-top:2em">
+
+			<div class="row">
+
+				<div class="col-md-9 animate-box">
+					
+					<div class="services">
+						<div class="desc">
+							<h3 class="font-weight-bold" ><a href="/report"><b>{{blog.blogtitle}}</b></a></h3>
+							<p id="blog_{{blog.id}}">
+								<script>
+									$(function(){
+										
+										var blgcontend = HTMLDecode("{{blog.blogcontent}}")
+										var blogabstract = "{{blog.blogabstract}}"
+										
+										//$("#blog_{{blog.id}}").html(HTMLDecode("{{blog.blogcontent}}"));
+										$("#blog_{{blog.id}}").text(blogabstract)
+										
+										
+									});
+									//alert('{{blog.blogdate|date:"Y-m-d H:i:s"}}')
+								</script>
+							</p>
+							
+						</div>
+					</div>
+					<hr>	
+	
+				</div>
+				<div class="col-md-3 animate-box">
+					<div class="services">
+						<div class="desc my-new-border">
+							<h3 class="font-weight-bold" >导航</h3>
+							<p>
+								<h5 class="font-weight-bold" ><a href="#" >热点文章</a></h5>
+								<h5 class="font-weight-bold" ><a href="#" >最新发布</a></h5>
+								<h5 class="font-weight-bold" ><a href="#" >我的文章</a></h5>
+								<h5 class="font-weight-bold" ><a href="#" >精华知识</a></h5>
+								
+							</p>
+						</div>
+					</div>
+					<br>
+					<div class="services">
+						<div class="desc my-new-border">
+							<h3 class="font-weight-bold" >标签</h3>
+							<p>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >热点文章</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >最新发布</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >我的文章热点文章</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >精华</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >热文章</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >最新发布</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >我的文章</button>
+								<button href="#" class='btn_mine btn-info btn-sm_mine' >精华知识的</button>
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+        
+
+		
+	</div><!-- END container-wrap -->
+
+	
+	</div>
+
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
 	</div>
 	
-	
+	<!-- jQuery -->
+	<script src="/static/thirdparty/ft5_79_church/js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="/static/thirdparty/ft5_79_church/js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="/static/thirdparty/ft5_79_church/js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="/static/thirdparty/ft5_79_church/js/jquery.waypoints.min.js"></script>
+	<!-- Flexslider -->
+	<script src="/static/thirdparty/ft5_79_church/js/jquery.flexslider-min.js"></script>
+	<!-- Carousel -->
+	<script src="/static/thirdparty/ft5_79_church/js/owl.carousel.min.js"></script>
+	<!-- Magnific Popup -->
+	<script src="/static/thirdparty/ft5_79_church/js/jquery.magnific-popup.min.js"></script>
+	<script src="/static/thirdparty/ft5_79_church/js/magnific-popup-options.js"></script>
+	<!-- Counters -->
+	<script src="/static/thirdparty/ft5_79_church/js/jquery.countTo.js"></script>
+	<!-- Main -->
+	<script src="/static/thirdparty/ft5_79_church/js/main.js"></script>
 
-</div>
-
-	
-</body>
+	</body>
 </html>
+
